# Maily

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
src/core/email_client/: gmail.rs  mod.rs
src/gui/: mod.rs  resources.gresource.xml  style.css
src/gui/login/: dialog.ui  first_page.rs  first_page.ui  gmail_page.rs  gmail_page.ui  mod.rs  name_email_page.rs  name_email_page.ui
src/gui/main_window/: mod.rs  window.ui
