[package]
name = "maily"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
oauth2 = "4.4.2"
open = "5.3.0"
url = "2.5.2"

[build-dependencies]
glib-build-tools = "0.20.0"
