[package]
name = "maily"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.3.1"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
open = "5.3.0"
tokio = { version = "1", features = ["full"] }
google-gmail1 = "5.0.5"

[build-dependencies]
glib-build-tools = "0.20.0"
